# booth

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
public/: autopilot.json
src/: App.tsx  booth.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-yt-dlp.sh
src-tauri/src/: audio.rs  config.rs  decode.rs  export.rs  lib.rs  main.rs  model.rs  script.rs  session.rs  subtitles.rs  transcribe.rs  transcript.rs  transcript_export.rs  transcripts.rs  wav.rs  whisper.rs  ytdlp.rs
src/components/: BackButton.tsx  Btn.tsx  GlitchFlash.tsx  HelpOverlay.tsx  LevelMeter.tsx  Oscilloscope.tsx  Scanlines.tsx  TakeStack.tsx  Teleprompter.tsx  WaveformEditor.tsx
src/hooks/: useAudioFrames.ts  useAutopilot.ts  useKeymap.ts  useTakePlayer.ts
src/lib/: ipc.ts  session.ts  sfx.ts  transcript.ts
src/screens/: Booth.tsx  Grouping.tsx  Load.tsx  PowerOn.tsx  Review.tsx  Transcribe.tsx  Transcripts.tsx
tools-dev/: shoot-booth.sh
