[package]
name = "booth"
version = "0.1.1"
description = "ATTESTRUM // BOOTH — a teleprompter-style narration recording booth"
authors = ["Hyper Beam Media LLC"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "booth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cpal = "0.16"
hound = "3.5"
crossbeam-channel = "0.5"
