[package]
name = "booth"
version = "0.1.4"
description = "ATTESTRUM // BOOTH — a teleprompter-style narration recording booth"
authors = ["Hyper Beam Media LLC"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "booth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cpal = "0.16"
hound = "3.5"
crossbeam-channel = "0.5"
docx-rs = "0.4.20"
genpdfi = "0.2.7"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "alac"] }
rubato = "0.15"
sha2 = "0.11.0"
ureq = "2"

# whisper.cpp GPU backend is platform-specific: Metal on macOS, plain CPU
# everywhere else (Windows/Linux). CPU is universally compatible — no GPU
# toolkit at build time, no driver requirement at runtime — at the cost of
# slower inference. A Vulkan/CUDA Windows backend can be added later behind
# its own target table without touching the macOS path.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16.0" }
